# CHEP2023-kiwaku

./: .gitignore  README.md
code/acts_chep23/: README.md  global_variables.hpp  plot_generic_2023-08-28.py  plot_lorentz_2023-08-28.py  plot_slice-2023-08-28.py
code/acts_chep23/acts_field/: data_structures_common.hpp  field_common.hpp
code/acts_chep23/acts_field/kiwaku/: acts_struct_kiwaku.cpp  acts_struct_kiwaku.hpp  acts_struct_kiwaku_deep.hpp  field_kiwaku.hpp
code/acts_chep23/acts_field/standalone/: acts_struct_standalone.hpp  acts_struct_standalone_deep.hpp  field_standalone.hpp
code/acts_chep23/cmake/: CMakeLists.txt
code/acts_chep23/lorentz_euler/: lorentz_bench_common.hpp  lorentz_common.hpp
code/acts_chep23/lorentz_euler/kiwaku/: lorentz_kiwaku.cpp
code/acts_chep23/lorentz_euler/mem_pattern_test/: mem_pattern_test.cpp
code/acts_chep23/lorentz_euler/plot/: atest.py  deprecated_plot_diff.py  plot_comments.py  plot_diff_2023-04-25.py  plot_diff_2023-08-28.py  plot_utils.py  test.py
code/acts_chep23/lorentz_euler/plot/data/: lorentz-euler_covfie_blop-debian11_2023-04-17_4096-65536_1024-2048_128-131072_InterpolateLin-LayoutStride-field.txt  lorentz-euler_covfie_blop-debian11_2023-04-17_4096-65536_1024-2048_128-131072_InterpolateNN-LayoutStride-field.txt  lorentz-euler_covfie_blop-debian11_2023-04-17_4096-65536_1024-2048_128-131072_constant-field.txt  lorentz_kiwaku_blop-debian11_2023-04-18_4096-65536_1024-2048_128-131072_acts-field.txt  lorentz_kiwaku_blop-debian11_2023-04-18_4096-65536_1024-2048_128-131072_constant-field.txt  lorentz_kiwaku_msi-chaton_4096-65536_1024-2048_128-131072_constant-field.txt  lorentz_standalone_blop-debian11_2023-04-16_4096-65536_1024-2048_128-131072_acts-field.txt  lorentz_standalone_blop-debian11_2023-04-16_4096-65536_1024-2048_128-131072_constant-field.txt  lorentz_standalone_chaton_2023-04-18_4096-65536_1024-2048_128-131072_acts-field.txt  lorentz_standalone_msi-chaton_4096-65536_1024-2048_128-131072_constant-field.txt
code/acts_chep23/lorentz_euler/plot/data3/: lorentz-euler_covfie_blop-debian11_4096-65536_1024-65536_128-128_InterpolateLin-LayoutStride-field.txt  lorentz_kiwaku_opti_blop-debian11_4096-65536_1024-65536_128-128_acts-field.txt  lorentz_standalone_opti_blop-debian11_4096-65536_1024-65536_128-128_acts-field.txt  lorentz_standalone_opti_blop-debian11_4096-65536_1024-65536_128-128_constant-field.txt
code/acts_chep23/lorentz_euler/standalone/: lorentz_standalone.cpp
code/acts_chep23/lorentz_euler_image/: lorentz_bench_common.hpp  lorentz_common.hpp
code/acts_chep23/lorentz_euler_image/standalone/: lorentz_standalone.cpp
code/acts_chep23/mem_test_compare_files/: file_comp.cpp  printer.hpp
code/acts_chep23/slice/: acts_slice_utils.hpp
code/acts_chep23/slice/kiwaku/: acts_slice_kiwaku.cpp  bitmap_kiwaku.hpp
code/acts_chep23/slice/plot/: plot_diff.py  plot_diff_slice-2023-05-01.py
code/acts_chep23/slice/standalone/: acts_slice_standalone.cpp  bitmap_standalone.hpp
code/common/: program_args.hpp  program_args_test.cpp
code/common/lorentz-euler/: lorentz-euler_utlils.hpp
code/common/plot/: plot_utils.py
code/common/utils/: chrono.hpp
(+50 files in other folders)
